# Orange

./: .cursorrules  .gitignore  ORANGE — План реализации нереализованных функций.md  ORANGE — Полное описание проекта.md  ORIGINAL_REQUEST.md  PROJECT.md  check_models.py  main.py  requirements.txt  Дайджест дня.md  Ревю задач и заметок.md  Умный Ассистент Obsidian.md
config/: i18n.json  settings.py
core/: agent.py  bm25.py  bridge.py  commands_handler.py  daemon_manager.py  db.py  dependencies.py  file_lock.py  file_ops.py  folding.py  git_backup.py  graph.py  graph_api.py  hybrid_search.py  markdown_ops.py  mcp_client.py  profiles.py  tools.py  watcher.py
integrations/obsidian/: query_orange.py
mcp_servers/: README.md  index.ts  package.json
orange_core/: BUILD.md  Cargo.toml  pyproject.toml
orange_core/src/: lib.rs
stitch_orange_terminal_interface/: 4code.html  5DESIGN.md  6code.html  code.html
stitch_orange_terminal_interface/orange_terminal_expanded_telemetry/: code2.html
stitch_orange_terminal_interface/orange_terminal_obsidian_export_active/: 3code.html
test_vault/: daily_log.md  draft_intro.md  final_intro.md  project_ideas.md  project_ideas.md.1779050346.bak  project_ideas.md.1779050760.bak  rust_notes.md  write_test.md  write_test.md.1779050313.bak
test_vault/projects/ai/: transformers.md
test_vault_run/: dummy_note.md
test_vault_run/04-projects/: Export_5df42f5e.md
test_vault_run/2026/: tasks_test.md
test_vault_run/test_subdir/: sub_note.md
ui/: index.html  main.js  style.css
